--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:text="@string/search"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textAllCaps="false"
         app:cornerRadius="16dp"
         app:icon="@drawable/ic_search"
         app:iconGravity="textStart"
@@ -49,6 +50,7 @@
         android:text="@string/media_library"
         android:textColor="@color/black"
         android:textSize="22sp"
+        android:textAllCaps="false"
         app:cornerRadius="16dp"
         app:icon="@drawable/ic_library"
         app:iconGravity="textStart"
@@ -66,6 +68,7 @@
         android:layout_marginBottom="28dp"
         android:backgroundTint="@color/white"
         android:text="@string/settings"
+        android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="22sp"
         app:cornerRadius="16dp"
