--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,59 +21,20 @@
 
     <Button
         android:id="@+id/search"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="@dimen/button_margin_large"
-        android:layout_marginStart="@dimen/button_margin"
-        android:layout_marginEnd="@dimen/button_margin"
-        android:backgroundTint="@color/white"
+        style="@style/MainScreenButton"
         android:text="@string/search"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textAllCaps="false"
-        app:cornerRadius="16dp"
-        app:icon="@drawable/ic_search"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_margin"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/ic_search" />
 
     <Button
         android:id="@+id/library"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="@dimen/button_margin"
-        android:layout_marginStart="@dimen/button_margin"
-        android:layout_marginEnd="@dimen/button_margin"
-        android:backgroundTint="@color/white"
+        style="@style/MainScreenButton"
         android:text="@string/media_library"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textAllCaps="false"
-        app:cornerRadius="16dp"
-        app:icon="@drawable/ic_library"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_margin"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/ic_library" />
 
     <Button
         android:id="@+id/settings"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="@dimen/button_margin"
-        android:layout_marginStart="@dimen/button_margin"
-        android:layout_marginEnd="@dimen/button_margin"
+        style="@style/MainScreenButton"
         android:layout_marginBottom="28dp"
-        android:backgroundTint="@color/white"
         android:text="@string/settings"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        app:cornerRadius="16dp"
-        app:icon="@drawable/ic_settings"
-        app:iconGravity="textStart"
-        app:iconPadding="@dimen/icon_margin"
-        app:iconTint="@color/black" />
+        app:icon="@drawable/ic_settings" />
 </LinearLayout>
