--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_arrow_back"
+            android:backgroundTint="?attr/colorSecondary"
             tools:ignore="ContentDescription" />
 
         <TextView
