--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimaryDark">@color/deepest_blue</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimarySurface">@color/white</item>
+        <item name="colorAccent">@color/deepest_blue</item>
+        <item name="colorSecondary">@color/deepest_blue</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="android:windowBackground">@color/deepest_blue</item>
+        <item name="hintTextAppearance">@color/black</item>
+        <item name="colorSurfaceVariant">@color/deepest_blue</item>
+        <item name="colorPrimaryInverse">@color/white</item>
+        <item name="colorButtonNormal">@color/middle_grey</item>
     </style>
 </resources>
