--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/deepest_blue</item>
+        <item name="colorPrimaryDark">@color/deepest_blue</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="colorSecondary">@color/yp_blue</item>
+        <item name="colorOnSecondary">@color/smoke_grey</item>
+        <item name="android:navigationBarColor">@color/deepest_blue</item>
+        <item name="colorPrimarySurface">@color/grey</item>
+        <item name="colorSurfaceVariant">@color/grey</item>
+        <item name="colorPrimaryInverse">@color/deepest_blue</item>
+        <item name="colorButtonNormal">@color/deep_grey</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
