--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -27,6 +27,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/settings"
             android:textSize="26sp"
+            android:textColor="?attr/colorPrimary"
             app:icon="@drawable/ic_arrow_back"
             app:iconGravity="textStart"
             app:iconPadding="5dp"
@@ -45,10 +46,11 @@
             style="@style/SettingsItemText"
             android:text="@string/dark_theme" />
 
-        <Switch
+        <androidx.appcompat.widget.SwitchCompat
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_gravity="end"/>
+            android:layout_gravity="end"
+            android:theme="@style/SettingsSwitch"/>
 
 
     </FrameLayout>
