--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,15 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Base.Theme.PlaylistMaker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="colorPrimaryDark">@color/deepest_blue</item>
+        <item name="colorPrimaryDark">@color/black_blue</item>
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimarySurface">@color/white</item>
-        <item name="colorAccent">@color/deepest_blue</item>
-        <item name="colorSecondary">@color/deepest_blue</item>
+        <item name="colorAccent">@color/black_blue</item>
+        <item name="colorSecondary">@color/black_blue</item>
         <item name="colorOnSecondary">@color/white</item>
-        <item name="android:windowBackground">@color/deepest_blue</item>
+        <item name="android:windowBackground">@color/black_blue</item>
         <item name="hintTextAppearance">@color/black</item>
-        <item name="colorSurfaceVariant">@color/deepest_blue</item>
+        <item name="colorSurfaceVariant">@color/black_blue</item>
         <item name="colorPrimaryInverse">@color/white</item>
         <item name="colorButtonNormal">@color/middle_grey</item>
     </style>
