--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -56,6 +56,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/share_button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
@@ -74,6 +75,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/support_button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal">
@@ -91,6 +93,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/user_agreement_button"
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
