--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,21 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:paddingStart="4dp"
-        android:paddingEnd="52dp"
-        android:text="@string/title"
-        android:textColor="@color/white"
-        android:textSize="22sp" />
+        android:layout_width="match_parent">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="52dp"
+            android:text="@string/title"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
+    </androidx.appcompat.widget.Toolbar>
+
 
     <Button
         android:id="@+id/search"
