--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,36 +6,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <LinearLayout
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/settings_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="UseCompoundDrawables"
-        android:layout_marginStart="16dp">
+        app:title="@string/settings"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        android:textColor="@color/black"
+        android:fontFamily="@font/ys_display_medium"
+        android:textFontWeight="500">
 
-        <ImageView
-            android:id="@+id/arrow_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_arrow_back"
-            android:backgroundTint="?attr/colorSecondary"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="@string/settings"
-            android:textSize="26sp"
-            android:textColor="?attr/colorPrimary"
-            app:icon="@drawable/ic_arrow_back"
-            app:iconGravity="textStart"
-            app:iconPadding="5dp"
-            app:iconTint="@color/black"
-            android:fontFamily="@font/ys_display_medium"/>
-
-
-    </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -47,6 +29,7 @@
             android:text="@string/dark_theme" />
 
         <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/theme_switcher"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_gravity="end"
