--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,8 @@
         <item name="iconPadding">@dimen/icon_margin</item>
         <item name="iconTint">@color/black</item>
         <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="backgroundTint">?attr/colorAccent</item>
+        <item name="android:letterSpacing">0.0</item>
     </style>
     <style name="SettingsSwitch">
         <item name="colorControlActivated">@color/yp_blue</item>
