--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,16 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_search"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/search_toolbar"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:title="@string/search"
+        style="@style/Toolbar">
+    </androidx.appcompat.widget.Toolbar>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/search_field"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
+            android:background="@drawable/rounded_rect"
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="6dp"
+            android:paddingStart="14dp"
+            android:paddingEnd="14dp"
+            android:textColor="@color/black"
+            android:inputType="text"
+            android:hint="@string/search"
+            android:textColorHint="?attr/hintTextAppearance"
+            android:drawableTint="?attr/hintTextAppearance"
+            android:textCursorDrawable="@drawable/ic_text_cursor"
+            android:maxLines="1"
+            android:autofillHints="" />
+
+        <ImageView
+            android:id="@+id/cancel_button"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginEnd="36dp"
+            android:src="@drawable/ic_cancel"
+            android:visibility="invisible"
+            tools:ignore="ContentDescription"
+            app:tint="?attr/hintTextAppearance" />
+    </FrameLayout>
+
+</LinearLayout>
