--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <item name="backgroundTint">?attr/colorAccent</item>
         <item name="android:letterSpacing">0.0</item>
     </style>
+
     <style name="SettingsSwitch">
         <item name="colorControlActivated">@color/yp_blue</item>
         <item name="colorSwitchThumbNormal">@color/grey</item>
@@ -36,5 +37,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">end|center_vertical</item>
         <item name="android:layout_marginEnd">@dimen/button_margin</item>
+    </style>
+
+    <style name="Toolbar">
+        <item name="navigationIcon">@drawable/ic_arrow_back</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 </resources>
