--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorOnSecondary">@color/smoke</item>
         <item name="android:navigationBarColor">@color/black_blue</item>
         <item name="colorPrimarySurface">@color/grey</item>
+        <item name="hintTextAppearance">@color/grey</item>
         <item name="colorSurfaceVariant">@color/grey</item>
         <item name="colorPrimaryInverse">@color/black_blue</item>
         <item name="colorButtonNormal">@color/dark_grey</item>
