--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,7 +9,7 @@
         <item name="colorOnSecondary">@color/white</item>
         <item name="android:windowBackground">@color/black_blue</item>
         <item name="hintTextAppearance">@color/black</item>
-        <item name="colorSurfaceVariant">@color/black_blue</item>
+        <item name="colorSurfaceVariant">@color/white</item>
         <item name="colorPrimaryInverse">@color/white</item>
         <item name="colorButtonNormal">@color/middle_grey</item>
     </style>
