--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="button_margin_large">24dp</dimen>
 
     <dimen name="icon_margin">5dp</dimen>
+    <dimen name="text_title_size">16sp</dimen>
 </resources>
