--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -35,6 +35,8 @@
             android:drawableTint="?attr/hintTextAppearance"
             android:textCursorDrawable="@drawable/ic_text_cursor"
             android:maxLines="1"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
             android:autofillHints="" />
 
         <ImageView
