--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -62,21 +62,32 @@
         android:id="@+id/empty_search_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_gravity="center"
         tools:ignore="contentDescription" />
 
     <TextView
         android:id="@+id/empty_search_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:textColor="?attr/colorPrimarySurface"
+        android:textSize="19sp"
+        android:fontFamily="@font/ys_display_medium"/>
     
     <Button
         android:id="@+id/refresh_button"
         android:text="@string/Refresh"
         android:layout_height="36dp"
-        android:layout_width="91dp"
+        android:layout_width="96dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
         android:textSize="14sp"
         android:textAllCaps="false"
         android:fontFamily="@font/ys_display_medium"
+        android:letterSpacing="0.0"
+        app:cornerRadius="16dp"
         android:visibility="gone"
         android:textFontWeight="500"/>
 
