--- a/app/src/main/res/layout/track_item_layout.xml
+++ b/app/src/main/res/layout/track_item_layout.xml
@@ -31,8 +31,7 @@
             android:textSize="@dimen/text_title_size"
             android:ellipsize="end"
             android:maxLines="1"
-            style="@style/TrackAttributeStyle"
-            tools:text="@string/track_name_placeholder"/>
+            style="@style/TrackAttributeStyle"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,8 +45,7 @@
                 android:id="@+id/artist_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/TrackAttributeStyle"
-                tools:text="@string/artist_name_placeholder"/>
+                style="@style/TrackAttributeStyle"/>
 
             <ImageView
                 android:layout_width="wrap_content"
