--- a/app/src/main/res/layout/track_item_layout.xml
+++ b/app/src/main/res/layout/track_item_layout.xml
@@ -45,6 +45,7 @@
                 android:id="@+id/artist_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="250dp"
                 style="@style/TrackAttributeStyle"/>
 
             <ImageView
