--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,4 +56,10 @@
         <item name="android:maxLines">1</item>
         <item name="android:textColor">?attr/colorPrimarySurface</item>
     </style>
+    <style name="TrackAttributeTimeStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">?attr/colorPrimarySurface</item>
+    </style>
 </resources>
