--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="icon_margin">5dp</dimen>
     <dimen name="text_title_size">16sp</dimen>
+
+    <dimen name="big_album_cover_dp_rounded">8dp</dimen>
 </resources>
