--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="text_title_size">16sp</dimen>
 
     <dimen name="big_album_cover_dp_rounded">8dp</dimen>
+
+    <dimen name="player_play_button_side">100dp</dimen>
+    <dimen name="player_add_button_size">51dp</dimen>
+
+    <dimen name="player_track_description_margin_bottom">12dp</dimen>
 </resources>
