--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -51,6 +51,15 @@
             app:tint="?attr/hintTextAppearance" />
     </FrameLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="140dp"
+        android:indeterminateTint="@color/yp_blue"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/search_history_title"
         android:layout_width="match_parent"
