--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSecondary"
-    tools:context=".presentation.ui.MainActivity"
+    tools:context=".main.ui.MainActivity"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
