Fixed issues mentioned in the review.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,8 @@
         <item name="colorSurfaceVariant">@color/white</item>
         <item name="colorPrimaryInverse">@color/white</item>
         <item name="colorButtonNormal">@color/middle_grey</item>
+
+        <item name="emptySearchDrawable">@drawable/empty_search_dark</item>
+        <item name="connectionFailedDrawable">@drawable/connection_failed_dark</item>
     </style>
 </resources>
