--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,9 @@
         <item name="colorSurfaceVariant">@color/black</item>
         <item name="colorPrimaryInverse">@color/black_blue</item>
         <item name="colorButtonNormal">@color/dark_grey</item>
+
+        <item name="emptySearchDrawable">@drawable/empty_search_light</item>
+        <item name="connectionFailedDrawable">@drawable/connection_failed_light</item>
     </style>
 
     <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
