--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="smoke">#E6E8EB</color>
     <color name="grey">#AEAFB4</color>
     <color name="dark_grey">#6F7073</color>
+    <color name="heart_pink">#F56B6C</color>
 </resources>
