--- a/app/src/main/res/layout/library_favorites_fragment.xml
+++ b/app/src/main/res/layout/library_favorites_fragment.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/favorite_placeholder_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
         android:layout_gravity="center"
         android:src="?attr/emptySearchDrawable"
+        android:visibility="gone"
         tools:ignore="contentDescription" />
 
     <TextView
+        android:id="@+id/favorite_placeholder_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="16dp"
+        android:visibility="gone"
         style="@style/FragmentPlaceholderTextStyle"
         android:text="@string/library_is_empty"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/favorite_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:visibility="gone"
+        tools:itemCount="1">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
