--- a/app/src/main/res/layout/library_playlists_fragment.xml
+++ b/app/src/main/res/layout/library_playlists_fragment.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <Button
+        android:id="@+id/create_playlist_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cornerRadius="16dp"
