--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -101,4 +101,13 @@
         <item name="android:textFontWeight">500</item>
         <item name="android:textColor">?attr/colorPrimaryInverse</item>
     </style>
+
+    <style name="TextFieldStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+    </style>
+
+    <style name="TextInputEditStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextColor">@color/yp_blue</item>
+    </style>
 </resources>
