Sprint 23. Added new app icon and partialy playlist details page.

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -17,6 +17,14 @@
         <action
             android:id="@+id/actionLibraryToPlaylistCreation"
             app:destination="@id/playlistCreationFragment" />
+        <action
+            android:id="@+id/actionLibraryToPlaylistDetails"
+            app:destination="@id/playlistDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/playlistDetailsFragment"
+        android:name="com.practicum.playlistmaker.library.ui.PlaylistDetailsFragment"
+        android:label="PlaylistDetailsFragment">
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
