--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,4 +119,20 @@
         <item name="android:maxLines">1</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
+
+    <style name="PlaylistDetailsMenuItemStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:paddingVertical">22dp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="PlaylistDetailsInfo">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColor">@color/black_blue</item>
+    </style>
 </resources>
