Sprint 23. Added fragment for editing playlist data. Fixed several visual issues.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="button_margin_large">24dp</dimen>
 
     <dimen name="icon_margin">5dp</dimen>
+    <dimen name="icon_margin_large">24dp</dimen>
     <dimen name="text_title_size">16sp</dimen>
 
     <dimen name="big_album_cover_dp_rounded">8dp</dimen>
