--- a/app/src/main/res/layout/playlist_details_fragment.xml
+++ b/app/src/main/res/layout/playlist_details_fragment.xml
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="@dimen/icon_margin_large"
 
             android:src="@drawable/ic_share"
 
@@ -109,7 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="@dimen/icon_margin_large"
 
             android:src="@drawable/ic_menu_dots"
             app:layout_constraintStart_toStartOf="@id/playlist_details_share_button_iv"
@@ -127,7 +127,6 @@
         android:orientation="vertical"
 
         app:behavior_hideable="false"
-        app:behavior_peekHeight="266dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <View
@@ -148,7 +147,7 @@
         android:id="@+id/playlist_menu_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/playlist_details_menu_sheet_bg"
+        android:background="@drawable/playlist_details_tracks_sheet_bg"
         android:orientation="vertical"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         app:behavior_hideable="true"
@@ -162,38 +161,99 @@
             android:background="?attr/colorOnSecondary"
         />
 
-        <include
-            android:id="@+id/playlist_details_menu_info"
-            layout="@layout/playlist_item_layout"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="8dp"
-        />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/playlist_details_menu_share_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/PlaylistDetailsMenuItemStyle"
-            android:text="@string/share"
-        />
+            <ImageView
+                android:id="@+id/playlist_mini_image_iv"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ContentDescription"/>
 
-        <TextView
-            android:id="@+id/playlist_details_menu_edit_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/PlaylistDetailsMenuItemStyle"
-            android:text="@string/edit"
-        />
+            <TextView
+                android:id="@+id/playlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@id/playlist_mini_image_iv"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/playlist_mini_image_iv"
+                android:gravity="start|center_vertical"
+                android:textColor="?attr/colorSurfaceVariant"
+                android:textSize="@dimen/text_title_size"
+                android:ellipsize="end"
+                android:maxLines="1"
+                style="@style/TrackAttributeStyle"
+                tools:text="[Playlist Name]" />
 
-        <TextView
-            android:id="@+id/playlist_details_menu_delete_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/PlaylistDetailsMenuItemStyle"
-            android:text="@string/delete_playlist"
-        />
+            <TextView
+                android:id="@+id/count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@id/playlist"
+                app:layout_constraintStart_toEndOf="@id/playlist_mini_image_iv"
+                app:layout_constrainedWidth="true"
+                tools:text="Track Singer"/>
+
+            <TextView
+                android:id="@+id/playlist_details_menu_share_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/share"
+                android:layout_marginTop="37dp"
+                android:layout_marginStart="16dp"
+                android:gravity="start|center_vertical"
+                android:textColor="?attr/colorSurfaceVariant"
+                android:textSize="@dimen/text_title_size"
+                android:ellipsize="end"
+                android:maxLines="1"
+                style="@style/TrackAttributeStyle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/playlist_mini_image_iv" />
+
+            <TextView
+                android:id="@+id/playlist_details_menu_edit_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/edit_info"
+                android:layout_marginTop="42dp"
+                android:layout_marginStart="16dp"
+                android:gravity="start|center_vertical"
+                android:textColor="?attr/colorSurfaceVariant"
+                android:textSize="@dimen/text_title_size"
+                android:ellipsize="end"
+                android:maxLines="1"
+                style="@style/TrackAttributeStyle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/playlist_details_menu_share_tv" />
+
+            <TextView
+                android:id="@+id/playlist_details_menu_delete_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete_playlist"
+                android:layout_marginTop="42dp"
+                android:layout_marginStart="16dp"
+                android:gravity="start|center_vertical"
+                android:textColor="?attr/colorSurfaceVariant"
+                android:textSize="@dimen/text_title_size"
+                android:ellipsize="end"
+                android:maxLines="1"
+                style="@style/TrackAttributeStyle"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/playlist_details_menu_edit_tv" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
