--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -34,6 +34,16 @@
         android:id="@+id/playlistCreationFragment"
         android:name="com.practicum.playlistmaker.library.ui.PlaylistCreationFragment"
         android:label="PlaylistCreationFragment"
-        tools:layout="@layout/library_playlist_create_fragment"
+        tools:layout="@layout/library_playlist_create_fragment">
+        <action
+            android:id="@+id/actionLibraryToPlaylistEdit"
+            app:destination="@id/playlistEditFragment"
         />
+    </fragment>
+    <fragment
+        android:id="@+id/playlistEditFragment"
+        android:name="com.practicum.playlistmaker.library.ui.PlaylistEditFragment"
+        android:label="PlaylistEditFragment"
+        tools:layout="@layout/library_playlist_create_fragment"
+    />
 </navigation>
