--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
     />
 
     <View
+        android:id="@+id/main_navigation_view_splitter"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/smoke"
